<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Profile -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

    <!-- Change Language -->
    <item
        android:id="@+id/nav_change_language"
        android:icon="@drawable/ic_language"
        android:title="@string/nav_change_language" />

    <!-- Educational Component -->
    <item
        android:id="@+id/nav_educational"
        android:icon="@drawable/ic_educational"
        android:title="@string/nav_educational" />

    <!-- Support -->
    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/ic_support"
        android:title="@string/nav_support" />

    <!-- Logout -->
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout" />

</menu>
