<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <!-- Spacer at the top -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/edit_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_name_title"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp" />

    <!-- Name EditText -->
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:paddingVertical="12dp" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:paddingVertical="12dp" />

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        android:minHeight="48dp" />

    <!-- Spacer at the bottom -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
